--- a/src/main/webapp/WEB-INF/templates/Layout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Layout.xhtml
@@ -20,6 +20,7 @@
 	<h:outputStylesheet library="resvut42" name="css/layout.css" />
       
     <h:outputScript target="body" library="primefaces" name="jquery/jquery.js" />
+    <h:outputScript target="body" library="resvut42" name="js/app.js" />
     
 </h:head>
 
