--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -7,7 +7,7 @@
         
 		<p:panelMenu style="width: 210px" toggleable="true">
 			<p:submenu label="Cadastros">
-				<p:menuitem value="Filial" />
+			    <p:menuitem value="Empresa"  outcome="Empresa.xhtml"/>
 				<p:menuitem value="Cliente" />
 				<p:menuitem value="Fornecedor" />
 				<p:menuitem value="Conta Contábil" outcome="Conta.xhtml"/>
@@ -28,7 +28,7 @@
                 <p:menuitem value="Lançamento" />
                 <p:menuitem value="Transferência" />
             </p:submenu>			
-            <p:submenu label="Configurações">
+            <p:submenu label="Configurações">                
                 <p:menuitem value="Usuários" outcome="Usuario.xhtml"/>
             </p:submenu>			
 		</p:panelMenu>
