--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -7,10 +7,10 @@
         
 		<p:panelMenu style="width: 210px" toggleable="true">
 			<p:submenu label="Cadastros">
-			    <p:menuitem value="Empresa"  outcome="Empresa.xhtml"/>
+			    <p:menuitem value="Empresa"  outcome="Empresa"/>
 				<p:menuitem value="Cliente" />
 				<p:menuitem value="Fornecedor" />
-				<p:menuitem value="Conta Contábil" outcome="Conta.xhtml"/>
+				<p:menuitem value="Conta Contábil" outcome="Conta"/>
 			</p:submenu>
 			<p:submenu label="Contas a Receber">
 				<p:menuitem value="Provisionar" />
@@ -29,7 +29,7 @@
                 <p:menuitem value="Transferência" />
             </p:submenu>			
             <p:submenu label="Configurações">                
-                <p:menuitem value="Usuários" outcome="Usuario.xhtml"/>
+                <p:menuitem value="Usuários" outcome="Usuario"/>
             </p:submenu>			
 		</p:panelMenu>
 
