--- a/src/main/webapp/resources/resvut42/css/layout.css
+++ b/src/main/webapp/resources/resvut42/css/layout.css
@@ -12,33 +12,31 @@ body {
     top: 1px;
     right: 1px;
     left: 1px;
-    height: 50px;
-    background-color: #DAA520;	
+    height: 50px;	
 }
 
 .r42-footer{
     position: fixed;
-    bottom: 1px;
     right: 1px;
     left: 1px;
-    height: 50px;
-    background-color: #DAA520;  
+    bottom: 1px;
+    height: 30px;
 }
 .r42-footer p{
-	margin-top: 10px;
+	margin: 0px;
 	text-align: center;
-	font-size: 20pt;
+	font-size: 14pt;
 	font-style: oblique;
 }
 
 /* Configuração Menu */
 .r42-menubar{
-    margin-top: 55px;
-    margin-bottom: 55px;
+    margin-top: 65px;
+    margin-bottom: 40px;
     margin-right: 1px;
     margin-left: 1px;  
     width: 240px;
-    height: 520px;
+    height: 518px;
     overflow-y: auto;	
 }
 
@@ -49,8 +47,8 @@ body {
         
 }
 .r42-pagina {
-    margin-top: 55px;
-    margin-bottom: 55px;
+    margin-top: 65px;
+    margin-bottom: 40px;
     margin-right: 1px;
     margin-left: 1px;       
 }
