--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -7,7 +7,8 @@
         
 		<p:panelMenu style="width: 210px" toggleable="true">
 			<p:submenu label="Cadastros">
-			    <p:menuitem value="Empresa"  outcome="Empresa"/>
+			    <p:menuitem value="Empresa" outcome="Empresa"/>
+			    <p:menuitem value="Banco" outcome="Banco"/>
 				<p:menuitem value="Cliente" />
 				<p:menuitem value="Fornecedor" />
 				<p:menuitem value="Conta Contábil" outcome="Conta"/>
@@ -24,7 +25,7 @@
 				<p:menuitem value="Provisionar" />
 				<p:menuitem value="Pagar" />
 			</p:submenu>
-            <p:submenu label="Bancos">
+            <p:submenu label="Movimento Bancário">
                 <p:menuitem value="Lançamento" />
                 <p:menuitem value="Transferência" />
             </p:submenu>			
