Alteração da tela de login e modificação do tema no arquivo xml

--- a/src/main/webapp/WEB-INF/templates/Layout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Layout.xhtml
@@ -29,7 +29,7 @@
 	<p:toolbar id="tbLayout" styleClass="r42-header">
 	    <p:toolbarGroup align="left" styleClass="r42-hleft">
 	        <h:link outcome="Inicio.xhtml">
-	            <h:graphicImage library="resvut42" name="img/logo.png" />
+	            <h:graphicImage library="resvut42" name="img/logoadmcon.png" />
 	        </h:link>
 	        <p:outputLabel style="font-size:18pt; margin-left:30px"  value="#{controlePrincipal.empresa.fantasia}"/>
 	    </p:toolbarGroup>
