--- a/src/main/webapp/resources/resvut42/css/r42Login.css
+++ b/src/main/webapp/resources/resvut42/css/r42Login.css
@@ -1,4 +1,59 @@
+body{
+    background-repeat: no-repeat;
+    background-image: url("/marvin/javax.faces.resource/resvut42/img/backgroundAdmCon.png.xhtml");
+    width:100%;
+    height:100%;
+}
 .r42-PanelLogin{
-    top: 10px;
-    left: 10px;	
+    font-size:larger;
+    font-family: Arial;
+    background-color:rgba(34, 34, 34, 0.43);
+    position:fixed;
+    float:right;
+    right:100px;
+    bottom: 100pt;
+    box-shadow: 1px 1px 1px 1px black;
+    border-radius: 10px;    
+    width: 300px;
+    height: 150px; 
+    color: white;
+}
+
+.acessar {
+	background-color:#44c767;
+	-moz-border-radius:42px;
+	-webkit-border-radius:42px;
+	border-radius:42px;
+	border:2px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:14px;
+	padding:9px 7px;
+	text-decoration:none;
+	position: relative;
+	top:-10px;
+	margin-left: 10px;
+}
+.acessar:hover {
+	background-color:#5cbf2a;
+}
+.acessar:active {
+	position:relative;
+	top:1px;
+}
+
+.usuarioSenha{
+	position: relative;
+	top:-10px;
+	margin-left:10px;
+	border-radius: 10px;
+	width: 200px;
+	height: 25px;
+}
+.textoUsuarioSenha{
+	position:relative;
+	top:1px;
+	margin-left:10px;
 }
