--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -31,6 +31,7 @@
             </p:submenu>			
             <p:submenu label="Configurações">                
                 <p:menuitem value="Usuários" outcome="Usuario"/>
+                <p:menuitem value="Migração" outcome="Migracao"/>
             </p:submenu>			
 		</p:panelMenu>
 
