Inclusão periodo bancário

--- a/src/main/webapp/WEB-INF/templates/Layout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Layout.xhtml
@@ -45,7 +45,7 @@
     <ui:include src="/WEB-INF/templates/DialogoConfirmacao.xhtml" />      
     
     <p:panel class="r42-footer">
-	   <p>ResVUT 42 Desenvolvimento</p>
+	   <p>TAMAGU Desenvolvimento</p>
 	</p:panel>
 	
 </h:body>
