Tela de lançamento bancario Ajustes na pesquisa

--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -26,7 +26,7 @@
 				<p:menuitem value="Pagar" />
 			</p:submenu>
             <p:submenu label="Movimento Bancário">
-                <p:menuitem value="Lançamento" />
+                <p:menuitem value="Lançamento" outcome="BancoLcto"/>
                 <p:menuitem value="Transferência" />
             </p:submenu>			
             <p:submenu label="Configurações">                
