Seleção de Banco e Periodo para lançamento Melhoria no processo de pesquisa

--- a/src/main/webapp/resources/resvut42/css/layout.css
+++ b/src/main/webapp/resources/resvut42/css/layout.css
@@ -54,7 +54,7 @@ body {
 	margin-bottom: 5px;
 }
 
-.r42-toolbar-right p {
+.r42-toolbar-right {
     margin-top:5px; 
     margin-bottom:5px; 
     margin-right: 5px
