--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -9,8 +9,8 @@
 			<p:submenu label="Cadastros">
 			    <p:menuitem value="Empresa" outcome="Empresa"/>
 			    <p:menuitem value="Banco" outcome="Banco"/>
-				<p:menuitem value="Cliente" />
-				<p:menuitem value="Fornecedor" />
+				<p:menuitem value="Cliente" outcome="Cliente"/>
+				<p:menuitem value="Fornecedor" outcome="Fornecedor" />
 				<p:menuitem value="Conta Contábil" outcome="Conta"/>
 			</p:submenu>
 			<p:submenu label="Contas a Receber">
