--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -17,6 +17,7 @@
 				<p:menuitem value="Provisionar" />
 				<p:menuitem value="Receber" />
 				<p:submenu label="Boletos">
+				    <p:menuitem value="Cobrança" outcome="Cobranca"/>
 					<p:menuitem value="Gerar" />
 					<p:menuitem value="Emitir" />
 				</p:submenu>
