Geração de Boletos

--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -18,7 +18,7 @@
 				<p:menuitem value="Receber" />
 				<p:submenu label="Boletos">
 				    <p:menuitem value="Cobrança" outcome="Cobranca"/>
-					<p:menuitem value="Gerar" />
+					<p:menuitem value="Gerar" outcome="Boleto"/>
 					<p:menuitem value="Emitir" />
 				</p:submenu>
 			</p:submenu>
