Criei o ControleFornecedor, tela fornecedor, ajuste no menu para chamar a tela fornecedor, ajuste na entidade Fornecedor, ajuste no SerFornecedor.

--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -10,7 +10,7 @@
 			    <p:menuitem value="Empresa" outcome="Empresa"/>
 			    <p:menuitem value="Banco" outcome="Banco"/>
 				<p:menuitem value="Cliente" outcome="Cliente"/>
-				<p:menuitem value="Fornecedor" />
+				<p:menuitem value="Fornecedor" outcome="Fornecedor" />
 				<p:menuitem value="Conta Contábil" outcome="Conta"/>
 			</p:submenu>
 			<p:submenu label="Contas a Receber">
