Geração de contas a Receber Transferencia de boletos para Títulos

--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -14,12 +14,9 @@
 				<p:menuitem value="Conta Contábil" outcome="Conta"/>
 			</p:submenu>
 			<p:submenu label="Contas a Receber">
-				<p:menuitem value="Provisionar" />
-				<p:menuitem value="Receber" />
-				<p:submenu label="Boletos">
-				    <p:menuitem value="Cobrança" outcome="Cobranca"/>
-					<p:menuitem value="Boleto" outcome="Boleto"/>
-				</p:submenu>
+				<p:menuitem value="Títulos" outcome="Receber"/>
+				<p:menuitem value="Cobrança" outcome="Cobranca"/>
+				<p:menuitem value="Boleto" outcome="Boleto"/>
 			</p:submenu>
 			<p:submenu label="Contas a Pagar">
 				<p:menuitem value="Provisionar" />
