Retorno cnab e ajustes

--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -17,6 +17,7 @@
 				<p:menuitem value="Títulos" outcome="Receber"/>
 				<p:menuitem value="Cobrança" outcome="Cobranca"/>
 				<p:menuitem value="Boleto" outcome="Boleto"/>
+				<p:menuitem value="Retorno" outcome="BoletoRetorno"/>
 			</p:submenu>
 			<p:submenu label="Contas a Pagar">
 				<p:menuitem value="Provisionar" />
