ajuste baixa automatica

--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -14,13 +14,12 @@
 				<p:menuitem value="Conta Contábil" outcome="Conta"/>
 			</p:submenu>
 			<p:submenu label="Contas a Receber">
-				<p:menuitem value="Títulos" outcome="Receber"/>
+				<p:menuitem value="Receber" outcome="Receber"/>
 				<p:menuitem value="Cobrança" outcome="Cobranca"/>
 				<p:menuitem value="Boleto" outcome="Boleto"/>
 				<p:menuitem value="Retorno" outcome="BoletoRetorno"/>
 			</p:submenu>
 			<p:submenu label="Contas a Pagar">
-				<p:menuitem value="Provisionar" />
 				<p:menuitem value="Pagar" outcome="Pagar" />
 			</p:submenu>
             <p:submenu label="Movimento Bancário">
