--- a/src/main/java/br/com/resvut42/marvin/jasper/Clientes.jrxml
+++ b/src/main/java/br/com/resvut42/marvin/jasper/Clientes.jrxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-06-01T19:46:35 -->
+<!-- 2017-06-07T14:07:04 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a7cf7e16-91da-41d7-8e86-8a5fe89c1432">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
+	<parameter name="empresa" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -11,24 +12,27 @@
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="74" splitType="Stretch">
-			<staticText>
-				<reportElement x="197" y="20" width="160" height="30" uuid="978d2dd9-23cb-4812-bd66-98d1eecc002a"/>
-				<text><![CDATA[RELATÓRIO DE CLIENTES]]></text>
-			</staticText>
+	<pageHeader>
+		<band height="80" splitType="Stretch">
 			<textField pattern="MMMMM dd, yyyy">
-				<reportElement x="0" y="40" width="100" height="30" uuid="668ce111-091c-4714-89f5-1c5edf292e69"/>
+				<reportElement x="0" y="50" width="100" height="30" uuid="668ce111-091c-4714-89f5-1c5edf292e69"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="197" y="40" width="160" height="30" uuid="978d2dd9-23cb-4812-bd66-98d1eecc002a"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[RELATÓRIO DE CLIENTES]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="450" y="40" width="100" height="30" uuid="bf6ff319-8346-4ee2-a12d-d99e4d013f56"/>
+				<reportElement x="460" y="50" width="100" height="30" uuid="bf6ff319-8346-4ee2-a12d-d99e4d013f56"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="227" y="0" width="100" height="30" uuid="013b0fb0-886f-4d65-b027-7d9e9db766dc"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$P{empresa}]]></textFieldExpression>
+			</textField>
 		</band>
-	</title>
-	<pageHeader>
-		<band height="35" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
 		<band height="27" splitType="Stretch">
@@ -43,7 +47,7 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch">
+		<band height="24" splitType="Stretch">
 			<textField>
 				<reportElement x="0" y="0" width="278" height="20" uuid="ae343f72-7912-4d60-9282-dd9efc30f7c1"/>
 				<textFieldExpression><![CDATA[$F{idCliente}]]></textFieldExpression>
@@ -54,13 +58,4 @@
 			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch"/>
-	</pageFooter>
-	<summary>
-		<band height="42" splitType="Stretch"/>
-	</summary>
 </jasperReport>
