--- a/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -24,6 +24,7 @@
 			</p:submenu>
             <p:submenu label="Movimento Bancário">
                 <p:menuitem value="Lançamento" outcome="BancoLcto"/>
+                <p:menuitem value="Extrato" outcome="Extrato"/>
             </p:submenu>			
             <p:submenu label="Configurações">                
                 <p:menuitem value="Usuários" outcome="Usuario"/>
