--- a/src/main/java/br/com/resvut42/marvin/jasper/Clientes.jrxml
+++ b/src/main/java/br/com/resvut42/marvin/jasper/Clientes.jrxml
@@ -1,61 +1,160 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-06-07T14:07:04 -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a7cf7e16-91da-41d7-8e86-8a5fe89c1432">
+<!-- 2017-06-09T23:07:01 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4_Landscape_1" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8ac4aa7c-ab8a-4a44-82e1-70241fbcd5d8">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="empresa" class="java.lang.String"/>
+	<parameter name="cliente_contatos" class="java.lang.String"/>
+	<parameter name="estado" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
 	<field name="idCliente" class="java.lang.Long"/>
 	<field name="razaoSocial" class="java.lang.String"/>
+	<field name="endereco.cidade" class="java.lang.String"/>
+	<field name="uf" class="java.lang.String"/>
+	<field name="logradouro" class="java.lang.String"/>
+	<field name="telefone" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<pageHeader>
-		<band height="80" splitType="Stretch">
+	<title>
+		<band height="81" splitType="Stretch">
+			<rectangle>
+				<reportElement x="0" y="0" width="800" height="81" backcolor="#0B0B6E" uuid="53375c35-08b6-4a9c-8b52-0d80d99268fe"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="292" y="50" width="208" height="30" forecolor="#FFFFFF" uuid="160c0e12-ad24-4eec-acb7-d5f15b5da763"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[RELATÓRIO CLIENTES]]></text>
+			</staticText>
 			<textField pattern="MMMMM dd, yyyy">
-				<reportElement x="0" y="50" width="100" height="30" uuid="668ce111-091c-4714-89f5-1c5edf292e69"/>
+				<reportElement x="697" y="0" width="100" height="30" forecolor="#FFFFFF" uuid="628fe533-282d-4d51-a64c-862c4d51e24d"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="197" y="40" width="160" height="30" uuid="978d2dd9-23cb-4812-bd66-98d1eecc002a"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[RELATÓRIO DE CLIENTES]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="460" y="50" width="100" height="30" uuid="bf6ff319-8346-4ee2-a12d-d99e4d013f56"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="227" y="0" width="100" height="30" uuid="013b0fb0-886f-4d65-b027-7d9e9db766dc"/>
-				<textElement textAlignment="Center"/>
+				<reportElement x="84" y="0" width="100" height="30" forecolor="#FFFFFF" uuid="013b0fb0-886f-4d65-b027-7d9e9db766dc"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="14"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{empresa}]]></textFieldExpression>
 			</textField>
-		</band>
-	</pageHeader>
-	<columnHeader>
-		<band height="27" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="278" height="20" uuid="3e56f1a5-c513-45cd-ab14-fa138577de1f"/>
-				<text><![CDATA[idCliente]]></text>
+				<reportElement x="20" y="0" width="60" height="30" forecolor="#FFFFFF" uuid="e426a20e-dd4a-4659-992f-316d06baf031"/>
+				<textElement verticalAlignment="Middle">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Empresa:]]></text>
+			</staticText>
+		</band>
+	</title>
+	<columnHeader>
+		<band height="39" splitType="Stretch">
+			<staticText>
+				<reportElement x="14" y="3" width="29" height="30" uuid="5cce4497-6f33-453f-8511-e5bbf17b7dd7"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14"/>
+				</textElement>
+				<text><![CDATA[Id]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="278" y="0" width="277" height="20" uuid="f558fd23-bc6f-4590-9c15-13307a5926e2"/>
-				<text><![CDATA[razaoSocial]]></text>
+				<reportElement x="50" y="3" width="190" height="31" uuid="5838c9d5-3588-49be-b749-c3aa910fe814"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14"/>
+				</textElement>
+				<text><![CDATA[Razão Social]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="250" y="3" width="130" height="31" uuid="955fdc15-2e4d-4152-985f-fb81c9fc43f1"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14"/>
+				</textElement>
+				<text><![CDATA[Cidade]]></text>
+			</staticText>
+			<line>
+				<reportElement x="0" y="38" width="800" height="1" uuid="a38fb975-8118-4d7b-90df-acca6a8eadc6"/>
+			</line>
+			<staticText>
+				<reportElement x="492" y="3" width="169" height="31" uuid="6cbbe1e9-f488-4b54-b2d2-8f796642eeb2"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14"/>
+				</textElement>
+				<text><![CDATA[Endereço]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="668" y="2" width="130" height="31" uuid="a70bd585-9791-42a8-b750-3c3662f006e5"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14"/>
+				</textElement>
+				<text><![CDATA[Telefone]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="390" y="4" width="90" height="31" uuid="a5e5394a-2518-4827-81ea-e7187fe15235"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14"/>
+				</textElement>
+				<text><![CDATA[UF]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="24" splitType="Stretch">
+		<band height="42" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="278" height="20" uuid="ae343f72-7912-4d60-9282-dd9efc30f7c1"/>
+				<reportElement x="13" y="6" width="30" height="30" uuid="c727b67b-df72-40a7-95bf-ccf99cea7205"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{idCliente}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="280" y="0" width="277" height="20" uuid="486b29a6-5581-439e-96a7-8d0ae30f9362"/>
+				<reportElement x="50" y="6" width="190" height="30" uuid="4a1dbb09-3c37-4676-91ab-fab206a3616a"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{razaoSocial}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="250" y="6" width="130" height="30" uuid="e878675a-651e-49ba-8a13-e00f5fa1ffeb"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{endereco.cidade}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="492" y="6" width="169" height="30" uuid="cb69aa4c-5b32-4d03-887a-bee0bc590302"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{uf}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="668" y="6" width="130" height="30" uuid="9b9d5118-6423-4c99-b799-f9b4065b4362"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{logradouro}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="390" y="6" width="90" height="30" uuid="5195395b-0030-436e-92c4-403659e286d5"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{telefone}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
+	<pageFooter>
+		<band height="54" splitType="Stretch">
+			<textField>
+				<reportElement x="757" y="20" width="40" height="30" uuid="d754ce0f-954a-406e-a614-440bdbe461eb"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="0" width="800" height="1" uuid="b0472e20-ecc0-4fc2-9cea-2f82a79a9d82"/>
+			</line>
+		</band>
+	</pageFooter>
 </jasperReport>
