--- a/src/main/java/br/com/resvut42/marvin/jasper/Extrato.jrxml
+++ b/src/main/java/br/com/resvut42/marvin/jasper/Extrato.jrxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-06-14T09:52:06 -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a7cf7e16-91da-41d7-8e86-8a5fe89c1432">
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
+<!-- 2017-06-14T11:10:11 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Extrato" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="41274c2b-d6f4-4018-bc7d-888bd476bae9">
 	<parameter name="empresa" class="java.lang.String"/>
 	<parameter name="banco" class="java.lang.String"/>
 	<parameter name="periodo" class="java.lang.String"/>
@@ -10,54 +9,52 @@
 		<![CDATA[]]>
 	</queryString>
 	<field name="dataLcto" class="java.util.Date"/>
-	<field name="historico" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="documento" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="saldo" class="java.math.BigDecimal">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
+	<field name="historico" class="java.lang.String"/>
+	<field name="valorLctoConvertido" class="java.math.BigDecimal"/>
+	<field name="saldo" class="java.math.BigDecimal"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<pageHeader>
-		<band height="95" splitType="Stretch">
-			<textField pattern="MMMMM dd, yyyy">
-				<reportElement positionType="FixRelativeToBottom" x="0" y="50" width="100" height="30" uuid="668ce111-091c-4714-89f5-1c5edf292e69"/>
-				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="197" y="20" width="160" height="20" uuid="978d2dd9-23cb-4812-bd66-98d1eecc002a"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[Extrato bancário]]></text>
-			</staticText>
+		<band height="80" splitType="Stretch">
 			<textField>
-				<reportElement x="460" y="50" width="100" height="30" uuid="bf6ff319-8346-4ee2-a12d-d99e4d013f56"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="227" y="0" width="100" height="20" uuid="013b0fb0-886f-4d65-b027-7d9e9db766dc"/>
+				<reportElement x="180" y="0" width="200" height="20" uuid="aa87f276-22ec-4a1b-96d4-8de3da86c348"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$P{empresa}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="132" y="40" width="290" height="20" uuid="7eeb58b8-07d5-4541-a382-538a79c0fbc6"/>
+				<reportElement x="180" y="20" width="200" height="18" uuid="4c91270d-3b3c-4ff7-9f27-63232e8016f4"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$P{banco}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="130" y="60" width="290" height="20" uuid="898b5133-4d06-4d9b-9f42-5d28fbca6426"/>
+				<reportElement x="180" y="40" width="200" height="20" uuid="5ee5d1b1-e8f1-4a2d-a2b3-ffe3805fe92a"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$P{periodo}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="27" splitType="Stretch"/>
+		<band height="24" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="45" splitType="Stretch"/>
+		<band height="42" splitType="Stretch">
+			<textField>
+				<reportElement x="-5" y="0" width="85" height="30" uuid="18c54310-489d-4a08-a549-2cf343cddee3"/>
+				<textFieldExpression><![CDATA[$F{dataLcto}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="80" y="1" width="255" height="30" uuid="82175814-bf18-4296-bc2d-25d45a674489"/>
+				<textFieldExpression><![CDATA[$F{historico}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="335" y="1" width="115" height="30" uuid="a4b4a378-8b68-4521-be55-13c6a94fdf87"/>
+				<textFieldExpression><![CDATA[$F{valorLctoConvertido}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="450" y="0" width="100" height="30" uuid="7f3c50f4-d968-4a20-84d9-3f6d87814a12"/>
+				<textFieldExpression><![CDATA[$F{saldo}]]></textFieldExpression>
+			</textField>
+		</band>
 	</detail>
 </jasperReport>
